fixed layout bugs

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -13,6 +13,12 @@
 	.action-menu {
 		margin-right: 15px;
 	}
+	
+	
+}
+
+.discussion-thumbnail {
+	padding: 4px;
 }
 
 li.moreless-discussion {
@@ -29,7 +35,7 @@ li.moreless-discussion {
 
 .discussion-all {
 	.rating-xs {
-		font-size: 1.5em;
+		font-size: 1.3em;
 	}
 	
 	.simple-review-form {
@@ -47,6 +53,10 @@ li.moreless-discussion {
 
 ul.media-list > li.form {
 	margin-top: 20px;
+}
+
+.media-left .thumbnail {
+	margin-bottom: 0px;
 }
 
 li.comment, li.review, li.discussionitem {
@@ -123,4 +133,8 @@ li.comment, li.review, li.discussionitem {
 img.simple-user-pic {
 	max-width: 40px;
 	max-height: 40px;
+}
+
+form .media {
+	margin-bottom: 5px;
 }
