--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1438,12 +1438,13 @@ ul#urlList {
 }
 
 /** fixes for rating plugin */
+
 .rating-container {
 	.filled-stars {
 		text-shadow: none;
 	}
 	
-	.rating-disabled {
+	&.rating-disabled .rating {
 		cursor: default;
 	}
 }
